# bob

./: README.md  bob.cabal
src/: Main.hs  Manifest.hs  Sync.hs  Types.hs
